# i3d-assignment3

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
src/: animation.c  animation.h  camera.c  camera.h  collision.c  collision.h  controls.h  gl.h  level.c  level.h  main.c  material.c  material.h  mesh.c  mesh.h  osd.c  osd.h  player.c  player.h  skybox.c  skybox.h  state.h  tree.c  tree.h  util.c  util.h  vec.c  vec.h
